Fix SSO account popover scrollbars

--- a/modules/web/src/main/webapp/static/css/id7/id7-fixes.css
+++ b/modules/web/src/main/webapp/static/css/id7/id7-fixes.css
@@ -5,3 +5,7 @@
 .checkbox-inline input[type="checkbox"] {
 	margin-top: 7px;
 }
+
+.popover.account-information .popover-content {
+	overflow: visible;
+}
